Try to avoid test timeout. Revert to 2Sigma style executing processes. Use python instead IPython for IPython plugin - for te test purposes